--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "~9.1.0",
+    "@nativescript/schematics": "^10.0.2",
     "@ngtools/webpack": "~9.1.0",
     "nativescript-dev-webpack": "~1.5.0",
     "tns-platform-declarations": "~6.5.0",
