--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
         "@nativescript/theme": "2.3.3",
         "@progress-nativechat/nativescript-nativechat": "3.0.0",
         "kinvey-nativescript-sdk": "5.0.0",
+        "nativescript": "^6.5.1",
         "nativescript-accelerometer": "3.0.0",
         "nativescript-angular": "8.21.0",
         "nativescript-background-http": "4.2.1",
         "nativescript-camera": "4.5.0",
-        "nativescript-image": "3.0.1",
+        "nativescript-drop-down": "^5.0.6",
+        "nativescript-filter-select": "^1.3.0",
         "nativescript-geolocation": "5.1.0",
+        "nativescript-image": "3.0.1",
         "nativescript-imagepicker": "7.1.0",
         "nativescript-intl": "3.0.0",
         "nativescript-iqkeyboardmanager": "1.5.1",
@@ -56,7 +59,7 @@
         "@ngtools/webpack": "8.3.24",
         "nativescript-dev-webpack": "1.5.1",
         "tns-ios": "6.5.0",
-        "tns-platform-declarations": "6.5.0",
+        "tns-platform-declarations": "^6.5.0",
         "typescript": "3.5.3"
     }
 }
