--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "nativescript-camera": "4.5.0",
         "nativescript-drop-down": "^5.0.6",
         "nativescript-filter-select": "^1.3.0",
+        "nativescript-fontawesome": "^1.0.0",
         "nativescript-geolocation": "5.1.0",
         "nativescript-image": "3.0.1",
         "nativescript-imagepicker": "7.1.0",
