--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@nativescript/angular": "8.21.0",
         "@nativescript/core": "6.5.0",
         "@nativescript/theme": "2.3.3",
+        "@nstudio/nativescript-checkbox": "^1.0.0",
         "@progress-nativechat/nativescript-nativechat": "3.0.0",
         "kinvey-nativescript-sdk": "5.0.0",
         "nativescript": "^6.5.1",
@@ -40,6 +41,7 @@
         "nativescript-imagepicker": "7.1.0",
         "nativescript-intl": "3.0.0",
         "nativescript-iqkeyboardmanager": "1.5.1",
+        "nativescript-radiobutton": "^0.1.0",
         "nativescript-social-share": "1.6.0",
         "nativescript-theme-core": "1.0.6",
         "nativescript-ui-autocomplete": "6.0.1",
