--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@nativescript/angular": "8.21.0",
         "@nativescript/core": "6.5.0",
         "@nativescript/theme": "2.3.3",
+        "@nstudio/nativescript-cardview": "^2.0.0",
         "@progress-nativechat/nativescript-nativechat": "3.0.0",
         "kinvey-nativescript-sdk": "5.0.0",
         "nativescript": "^6.5.1",
