--- a/app/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/app/App_Resources/Android/src/main/AndroidManifest.xml
@@ -20,10 +20,12 @@
 
 	<application
 		android:name="com.tns.NativeScriptApplication"
+        android:usesCleartextTraffic="true"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme">
+        
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
