--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "nativescript-ui-dataform": "6.0.0",
         "nativescript-ui-gauge": "6.0.0",
         "nativescript-ui-listview": "8.0.1",
+        "nativescript-vibrate": "^4.0.1",
         "reflect-metadata": "0.1.13",
         "rxjs": "6.5.4",
         "rxjs-compat": "6.5.4",
