--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "nativescript-angular": "8.21.0",
         "nativescript-background-http": "4.2.1",
         "nativescript-camera": "4.5.0",
+        "nativescript-clipboard": "^2.0.0",
         "nativescript-drop-down": "^5.0.6",
         "nativescript-filter-select": "^1.3.0",
         "nativescript-fontawesome": "^1.0.0",
@@ -41,6 +42,8 @@
         "nativescript-imagepicker": "7.1.0",
         "nativescript-intl": "3.0.0",
         "nativescript-iqkeyboardmanager": "1.5.1",
+        "nativescript-ng-shadow": "^2.1.0",
+        "nativescript-orientation": "^2.2.5",
         "nativescript-social-share": "1.6.0",
         "nativescript-theme-core": "1.0.6",
         "nativescript-ui-autocomplete": "6.0.1",
